<resources>
    <string name="app_name">Firebase Examples</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="hint_email_field">Email</string>
    <string name="hint_password_field">Password</string>
    <string name="button_register">I want an account</string>
    <string name="login_button">Sign in</string>
    <string name="button_register_screen_opening">Opening register screen</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_name">Name</string>
    <string name="button_register_register">create my account</string>
    <string name="register_last_name">Last name</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_home_screen">Home screen</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="no_user_connected_msg">nobody connected</string>
    <string name="empty_field_msg">This field can not be empty</string>
    <string name="type">Type here</string>
    <string name="send_to_database_bt">Send</string>
    <string name="database_screen_label">Database Connection</string>
    <string name="no_action_attirbuted">No action attributed</string>
    <string name="empty_content_msg">No content</string>
    <string name="error_register_fields_content_bad">Please, done the form with consistent data</string>
    <string name="error_confirm_password">The password fields is not equals</string>
    <string name="title_activity_espaco_flexivel">EspacoFlexivelActivity</string>
    <string name="make_hideable">Toggle Hideable</string>

    <string name="lorem_ipsum_description">Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce tellus odio, dapibus id, fermentum quis, suscipit id, erat. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat. Pellentesque sapien. Cras elementum. Nulla pulvinar eleifend sem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque porta. Vivamus porttitor turpis ac leo.

 Morbi leo mi, nonummy eget, tristique non, rhoncus non, leo. Nullam faucibus mi quis velit. Integer in sapien. Fusce tellus odio, dapibus id, fermentum quis, suscipit id, erat. Fusce aliquam vestibulum ipsum. Aliquam erat volutpat. Pellentesque sapien. Cras elementum. Nulla pulvinar eleifend sem. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque porta. Vivamus porttitor turpis ac leo.

 In sem justo, commodo ut, suscipit at, pharetra vitae, orci. Duis sapien nunc, commodo et, interdum suscipit, sollicitudin et, dolor. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam id dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Mauris dictum facilisis augue. Fusce tellus. Pellentesque arcu. Maecenas fermentum, sem in pharetra pellentesque, velit turpis volutpat ante, in pharetra metus odio a lectus. Sed elit dui, pellentesque a, faucibus vel, interdum nec, diam. Mauris dolor felis, sagittis at, luctus sed, aliquam non, tellus. Etiam ligula pede, sagittis quis, interdum ultricies, scelerisque eu, urna. Nullam at arcu a est sollicitudin euismod. Praesent dapibus. Duis bibendum, lectus ut viverra rhoncus, dolor nunc faucibus libero, eget facilisis enim ipsum id lacus. Nam sed tellus id magna elementum tincidunt.

 Aenean placerat. In vulputate urna eu arcu. Aliquam erat volutpat. Suspendisse potenti. Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere. Nullam lectus justo, vulputate eget, mollis sed, tempor sed, magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam neque. Curabitur ligula sapien, pulvinar a, vestibulum quis, facilisis vel, sapien. Nullam eget nisl. Donec vitae arcu.

 Aenean placerat. In vulputate urna eu arcu. Aliquam erat volutpat. Suspendisse potenti. Morbi mattis felis at nunc. Duis viverra diam non justo. In nisl. Nullam sit amet magna in magna gravida vehicula. Mauris tincidunt sem sed arcu. Nunc posuere. Nullam lectus justo, vulputate eget, mollis sed, tempor sed, magna. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam neque. Curabitur ligula sapien, pulvinar a, vestibulum quis, facilisis vel, sapien. Nullam eget nisl. Donec vitae arcu.</string>

    <!--Nomes para as transicoes entre as telas da viewholderlist activity-->
    <string name="transitionViewHolderActivityItemImage">viewHolderActivityItemImageTransition</string>
    <string name="transitionViewHolderActivityItemTextTitle">viewHolderActivityItemTextTitleTransition</string>
    <string name="transitionViewHolderActivityItemTextTime">viewHolderActivityItemTextTimeTransition</string>
    <string name="transitionViewHolderActivityItemTextAddressDescription">viewHolderActivityItemTextTransitionTransition</string>

    <!--Strings para predefinir texto dos itens do recyclerview de exemplo-->
    <string name="title_of_this_item">Title of this item</string>
    <string name="description_of_this_item">Description of this item</string>
    <string name="date">Date</string>
    <string name="open_image_picker">Open image picker</string>
    <string name="title_activity_animated_vector_drawable__ex1">AnimatedVectorDrawable_Ex1Activity
    </string>

</resources>
