<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/item_customlistviewholderactivity_imageview"
        android:layout_width="100dp"
        android:transitionName="@string/transitionViewHolderActivityItemImage"
        android:layout_height="100dp"
        android:layout_margin="12dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/item_customlistviewholderactivity_title_textview"
        android:transitionName="@string/transitionViewHolderActivityItemTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Title"
        android:textSize="25dp"
        app:layout_constraintLeft_toRightOf="@id/item_customlistviewholderactivity_imageview" />

    <TextView
        android:id="@+id/item_customlistviewholderactivity_time_textview"
        android:transitionName="@string/transitionViewHolderActivityItemTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Time"
        app:layout_constraintLeft_toRightOf="@id/item_customlistviewholderactivity_imageview"
        app:layout_constraintTop_toBottomOf="@id/item_customlistviewholderactivity_title_textview" />

    <TextView
        android:transitionName="@string/transitionViewHolderActivityItemTextAddressDescription"
        android:id="@+id/item_customlistviewholderactivity_address_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Address"
        app:layout_constraintLeft_toRightOf="@id/item_customlistviewholderactivity_imageview"
        app:layout_constraintTop_toBottomOf="@id/item_customlistviewholderactivity_time_textview" />

    <ImageView

        android:id="@+id/item_customlistviewholderactivity_like_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent" />

    

</android.support.constraint.ConstraintLayout>