<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainContainerRegister"
    tools:context="br.com.thiagosousa.firebaseexamples.activitys.RegisterActivity">

    <!--Register form-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/field_margin"
        android:layout_marginLeft="@dimen/field_margin"
        android:layout_marginRight="@dimen/field_margin"
        android:layout_marginTop="@dimen/field_margin">

        <!--Name field-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_input_layout_for_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_field_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/perm_identity_black_18x18"
                android:hint="@string/register_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--Last name field-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/last_name_input_layout_for_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout_for_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/last_name_field_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/perm_identity_black_18x18"
                android:hint="@string/register_last_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--Email field-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_input_layout_for_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/last_name_input_layout_for_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_field_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mail_outline_black_18x18"
                android:hint="@string/hint_email_field"
                android:inputType="textWebEmailAddress"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--Password field-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_input_layout_for_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout_for_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_field_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/lock_open_black_18x18"
                android:hint="@string/hint_password_field"
                android:inputType="textVisiblePassword"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <!--Confirm password field-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_input_layout_for_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout_for_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password_field_for_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/lock_outline_black_18x18"
                android:hint="@string/register_confirm_password"
                android:inputType="textVisiblePassword"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/createNewUserButton"
            style="@style/LoginButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:padding="10dp"
            android:text="@string/button_register_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout_for_register"
            />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
