<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="br.com.thiagosousa.firebaseexamples.activitys.LoginActivity">


    <!--Login form-->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginFormLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/field_margin"
        android:layout_marginLeft="@dimen/field_margin"
        android:layout_marginRight="@dimen/field_margin"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            app:boxCornerRadiusBottomLeft="25dp"
            app:boxCornerRadiusBottomRight="25dp"
            app:boxCornerRadiusTopLeft="25dp"
            app:boxCornerRadiusTopRight="25dp"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_field_for_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/mail_outline_black_18x18"
                android:hint="@string/hint_email_field"
                android:inputType="textEmailAddress"
                android:padding="10dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomLeft="25dp"
            app:boxCornerRadiusBottomRight="25dp"
            app:boxCornerRadiusTopLeft="25dp"
            app:boxCornerRadiusTopRight="25dp"
            style="@style/Base.Widget.MaterialComponents.TextInputLayout"
            android:layout_marginTop="@dimen/field_margin"

            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/inputLayoutEmail"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_field_for_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_edittext_square_black"
                android:drawableEnd="@drawable/lock_outline_black_18x18"
                android:hint="@string/hint_password_field"
                android:inputType="textPassword"
                android:padding="10dp" />

        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/field_margin"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/login_button"
        android:theme="@style/LoginButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginFormLayout"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/registerScreenButton"
        style="@style/RegisterButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/button_register"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>